# kuopac

./: .gitignore  README.md  pyproject.toml
.github/workflows/: live.yml  tests.yml
docs/: audit-report.md  cli-design.md  opac-spec.md
examples/: 01_simple_search.py  02_advanced_query.py  03_pagination.py  04_facets_and_refine.py  05_detail_and_holdings.py  06_cinii_other_universities.py  07_suggest_and_spell.py  08_search_with_holdings.py  09_synopsis_and_toc.py
scripts/: analyze.py  audit.py  probe.py  probes.py
src/kuopac/: __init__.py  _http.py  _parse.py  client.py  enums.py  errors.py  models.py  query.py
src/kuopac/cli/: __init__.py  __main__.py  _listflag.py  config.py  errors.py  explain.py  main.py  projection.py  runtime.py  schema_gen.py
src/kuopac/cli/commands/: __init__.py  detail.py  did_you_mean.py  facets.py  holdings.py  manifest.py  schema_cmd.py  search.py  status.py  suggest.py  synopsis.py  version.py
src/kuopac/cli/formatters/: __init__.py  _envelope.py  _serialize.py  json_fmt.py  ndjson_fmt.py  table.py  tsv.py  yaml_fmt.py
tests/: test_enums.py  test_examples.py  test_http.py  test_models.py  test_query.py
tests/cli/: test_cli_integration.py  test_envelope.py  test_projection.py  test_schema.py  test_serialize.py
tests/client/: conftest.py  test_other_wire_format.py  test_search_wire_format.py
tests/live/: conftest.py  test_endpoints.py
tests/parse/: test_detail.py  test_misc_endpoints.py  test_search_results.py
