[project]
name = "kuopac"
version = "0.1.0"
description = "Type-safe Python client and CLI for Kyoto University KULINE OPAC (anonymous catalog access)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "lxml>=6.1.1",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kuopac"]
