[project]
name = "kuopac"
version = "0.1.1"
description = "Type-safe Python client and CLI for Kyoto University KULINE OPAC (anonymous catalog access)"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = [
    "kuline",
    "kyoto-university",
    "opac",
    "library",
    "catalog",
    "cinii",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Japanese",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3"]
cli-yaml = ["pyyaml>=6"]
cli-jmespath = ["jmespath>=1"]

[project.urls]
Homepage = "https://github.com/youseiushida/kuopac"
Repository = "https://github.com/youseiushida/kuopac"
Issues = "https://github.com/youseiushida/kuopac/issues"
Changelog = "https://github.com/youseiushida/kuopac/releases"

[project.scripts]
kuopac = "kuopac.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kuopac"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: hits the real KULINE server; opt-in via `--live` or env `KUOPAC_LIVE=1`",
]
